--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <version>0.3.45</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20241224</version>
+        </dependency>
 
     </dependencies>
 
