--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <version>4.12.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>ai.picovoice</groupId>
+            <artifactId>picovoice-java</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
