--- a/src/main/resources/configs/config.properties
+++ b/src/main/resources/configs/config.properties
@@ -5,4 +5,4 @@ homeassistant.token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJjOWNkYTg0MjE
 picovoice.token=0HFEC1eeh6qVkA885X+q3GSiucV0Ixffdrr0HCEaxhmiRLcVAiPyRg==
 picovoice.porcupine.name=models\\porcupine_params_ru.pv
 picovoice.wakeName.name=models\\Robert_ru_windows_v3_0_0.ppn
-vosk.model.path=models\\vosk-model-small-ru-0.22
+vosk.model.path=models\\vosk-model-small-ru-0.22\\
