--- a/src/main/resources/configs/config.properties
+++ b/src/main/resources/configs/config.properties
@@ -6,3 +6,4 @@ picovoice.token=0HFEC1eeh6qVkA885X+q3GSiucV0Ixffdrr0HCEaxhmiRLcVAiPyRg==
 picovoice.porcupine.name=models\\porcupine_params_ru.pv
 picovoice.wakeName.name=models\\Robert_ru_windows_v3_0_0.ppn
 vosk.model.path=models\\vosk-model-small-ru-0.22\\
+commands.path.name=commands\\
