--- a/src/main/resources/commands/default/hello_say.yml
+++ b/src/main/resources/commands/default/hello_say.yml
@@ -1,14 +1,19 @@
 info:
   type: say
-  keywords:
+  keywords: #указывать что может произнести человек для выполнения команды
     - привет
     - здравствуйте
     - здравствуй
     - хай
     - здарова
+    - добрый день
+    - доброе утро
+    - добрый вечер
 command:
   mode: say #say/audio
-  say:
+  say: #что может ответить sidr (разные разновидности ответов)
     - привет
     - приветствую
     - здравствуйте
+    - рад вас слышать
+    - доброго времени суток
