--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
         </dependency>
 
 
+        <!-- https://mavenlibs.com/maven/dependency/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
