--- a/src/main/resources/commands/default/humidity_ha.yml
+++ b/src/main/resources/commands/default/humidity_ha.yml
@@ -1,13 +1,16 @@
 info:
   type: ha
   keywords:
-    - температура
-    - температура в комнате
-    - температура в помещении
+    - влажность
+    - влажность в комнате
+    - влажность в помещении
+    - какая влажность
+    - какая влажность в комнате
+    - какая влажность в помещении
 
 command:
   mode: get #get\send
-  entityID: sensor.0xa4c138b8710c2145_temperature
+  entityID: sensor.0xa4c138b8710c2145_humidity
   get_keys: #при отсутствии выведет токо JSON ответ от устройства
     - state
     - attributes~unit_of_measurement # ~ нужен для обозначения перехода на ветвь дерева в JSON
