--- a/src/main/resources/commands/examples/ha.yml
+++ b/src/main/resources/commands/examples/ha.yml
@@ -11,7 +11,7 @@ command:
   entityID: sensor.0xa4c138b8710c2145_temperature
   get_keys: #при отсутствии выведет токо JSON ответ от устройства
     - state
-    - attributes<|>unit_of_measurement # <|> нужен для обозначения перехода на ветвь дерева в JSON
+    - attributes~unit_of_measurement # ~ нужен для обозначения перехода на ветвь дерева в JSON
 
 
 
