--- a/src/main/resources/configs/config.properties
+++ b/src/main/resources/configs/config.properties
@@ -11,4 +11,4 @@ vosk.model.path=models\\vosk-model-small-ru-0.22\\
 
 commands.path.name=commands\\
 
-json.root.placeholder=<|>
+json.root.placeholder=~
